--- a/SnapchatClone/Base.lproj/Main.storyboard
+++ b/SnapchatClone/Base.lproj/Main.storyboard
@@ -25,17 +25,17 @@
                                 <textInputTraits key="textInputTraits" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z7n-N9-rgb">
-                                <rect key="frame" x="45" y="409" width="300" height="34.000000000005457"/>
+                                <rect key="frame" x="45" y="409" width="300" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1RI-G3-YdO">
-                                <rect key="frame" x="45" y="478" width="300" height="34.000000000005457"/>
+                                <rect key="frame" x="45" y="478" width="300" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cherry" translatesAutoresizingMaskIntoConstraints="NO" id="8U4-Do-cfH">
-                                <rect key="frame" x="135.33333333333334" y="130" width="120" height="120"/>
+                                <rect key="frame" x="135.33333333333334" y="130" width="119.33333333333334" height="120"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ftw-nW-bAY">
                                 <rect key="frame" x="225" y="557" width="120" height="55"/>
@@ -174,75 +174,60 @@
             <point key="canvasLocation" x="1102" y="767"/>
         </scene>
         <!--Feed-->
-        <scene sceneID="jpv-XE-ElU">
+        <scene sceneID="a3q-dp-bKc">
             <objects>
-                <viewController id="42K-eD-XXd" customClass="FeedVC" customModule="SnapchatClone" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zdy-Gm-wcn">
+                <viewController id="n53-5l-GAE" customClass="FeedVC" customModule="SnapchatClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dIO-pB-hyj">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XvU-1L-aOb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="E7y-ll-YLm">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="803"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="639" id="5YH-Ed-hVp" customClass="FeedCell" customModule="SnapchatClone" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="639"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="653" translatesAutoresizingMaskIntoConstraints="NO" id="AzE-rZ-d7Q" customClass="FeedCell" customModule="SnapchatClone" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="653"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5YH-Ed-hVp" id="GKH-yN-Cmz">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="639"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AzE-rZ-d7Q" id="RnB-mN-nMr">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="653"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0UJ-6z-kY5">
-                                                    <rect key="frame" x="71.666666666666686" y="50" width="250" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="250" id="HGQ-Qs-jeH"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67o-pr-H7S">
+                                                    <rect key="frame" x="20" y="86" width="353" height="450"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mfv-Fs-0CC">
+                                                    <rect key="frame" x="20" y="26" width="350" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rTA-iO-Ev0">
-                                                    <rect key="frame" x="45" y="160" width="300" height="400"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="400" id="61A-EY-7Ub"/>
-                                                        <constraint firstAttribute="width" constant="300" id="Lu4-YM-gvE"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="rTA-iO-Ev0" secondAttribute="bottom" constant="68" id="NS6-cm-o3S"/>
-                                                <constraint firstItem="0UJ-6z-kY5" firstAttribute="top" secondItem="GKH-yN-Cmz" secondAttribute="topMargin" constant="39" id="YoW-YE-OzO"/>
-                                                <constraint firstItem="rTA-iO-Ev0" firstAttribute="leading" secondItem="GKH-yN-Cmz" secondAttribute="leadingMargin" constant="25" id="f5j-jU-NPM"/>
-                                                <constraint firstItem="0UJ-6z-kY5" firstAttribute="centerX" secondItem="GKH-yN-Cmz" secondAttribute="centerX" id="kXY-cp-O77"/>
-                                                <constraint firstItem="rTA-iO-Ev0" firstAttribute="top" secondItem="0UJ-6z-kY5" secondAttribute="bottom" constant="70" id="sIZ-Mm-Myb"/>
-                                            </constraints>
                                         </tableViewCellContentView>
+                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                         <connections>
-                                            <outlet property="feedImageView" destination="rTA-iO-Ev0" id="Xtl-PF-Ump"/>
-                                            <outlet property="feedUsernameLabel" destination="0UJ-6z-kY5" id="Xk5-cG-UON"/>
+                                            <outlet property="feedImageView" destination="67o-pr-H7S" id="bSV-7h-ZtE"/>
+                                            <outlet property="feedUsernameLabel" destination="Mfv-Fs-0CC" id="Hcm-lN-JpD"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="ZQG-fh-IuG"/>
+                        <viewLayoutGuide key="safeArea" id="iqE-PL-Xvz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="XvU-1L-aOb" firstAttribute="leading" secondItem="ZQG-fh-IuG" secondAttribute="leading" id="5vt-mE-Tad"/>
-                            <constraint firstItem="XvU-1L-aOb" firstAttribute="bottom" secondItem="ZQG-fh-IuG" secondAttribute="bottom" id="LgB-1i-M2Y"/>
-                            <constraint firstItem="XvU-1L-aOb" firstAttribute="centerX" secondItem="zdy-Gm-wcn" secondAttribute="centerX" id="mI5-Nl-yV0"/>
-                            <constraint firstItem="XvU-1L-aOb" firstAttribute="top" secondItem="ZQG-fh-IuG" secondAttribute="top" id="ptE-Cf-Iai"/>
-                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Feed" image="f.circle.fill" catalog="system" id="xQF-Mx-0Je"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="f.circle.fill" catalog="system" id="4Mk-eR-fCG"/>
+                    <navigationItem key="navigationItem" id="dR4-Cb-Sa3"/>
                     <connections>
-                        <outlet property="feedTableview" destination="XvU-1L-aOb" id="Avm-4Y-I4H"/>
-                        <segue destination="xPe-U0-U32" kind="show" identifier="toSnapVC" id="vwh-Bs-wXc"/>
+                        <outlet property="feedTableview" destination="E7y-ll-YLm" id="7hp-v7-CvC"/>
+                        <segue destination="xPe-U0-U32" kind="show" identifier="toSnapVC" id="Xq1-N5-392"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="C5u-XP-RRy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uOG-WZ-e1o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2006.8702290076335" y="-300"/>
+            <point key="canvasLocation" x="2006.8702290076335" y="-392.25352112676057"/>
         </scene>
         <!--SnapVC-->
         <scene sceneID="IkM-xs-pSR">
@@ -252,16 +237,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time Left: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NxD-FK-E8S">
-                                <rect key="frame" x="70.952902071149083" y="87.999999999986812" width="249.99999999986176" height="49.99999999998613"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Time Left: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NxD-FK-E8S">
+                                <rect key="frame" x="71" y="135" width="250" height="70"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JPY-tb-AFz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JPY-tb-AFz" firstAttribute="bottom" secondItem="NxD-FK-E8S" secondAttribute="bottom" constant="637" id="007-22-rz1"/>
+                            <constraint firstItem="NxD-FK-E8S" firstAttribute="top" secondItem="JPY-tb-AFz" secondAttribute="top" constant="135" id="8RW-Vb-Rrx"/>
+                            <constraint firstItem="NxD-FK-E8S" firstAttribute="centerX" secondItem="MjS-bR-6jh" secondAttribute="centerX" id="Ne5-Ub-sH0"/>
+                            <constraint firstItem="NxD-FK-E8S" firstAttribute="leading" secondItem="JPY-tb-AFz" secondAttribute="leading" constant="70.952902071149083" id="zRR-k0-zlR"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Zcu-bz-nO3"/>
                     <connections>
@@ -270,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OFj-nq-C1J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2891" y="-300"/>
+            <point key="canvasLocation" x="3007" y="-392"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Swk-dP-Eur">
@@ -283,7 +273,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="42K-eD-XXd" kind="relationship" relationship="viewControllers" id="YUx-SE-meL"/>
+                        <segue destination="n53-5l-GAE" kind="relationship" relationship="viewControllers" id="xT8-cp-saz"/>
                         <segue destination="Vrx-d6-ovM" kind="relationship" relationship="viewControllers" id="t9I-So-SZh"/>
                         <segue destination="Bdv-3G-tMT" kind="relationship" relationship="viewControllers" id="yaS-LV-p5L"/>
                     </connections>
